Fixed issues with some languages - Added support for haskell

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "onLanguage:vue-postcss",
         "onLanguage:javascriptreact",
         "onLanguage:typescriptreact",
+        "onLanguage:haskell",
         "onLanguage:php"
     ],
     "devDependencies": {
