--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "multi-formatter",
     "displayName": "Multiple Formatters",
     "publisher": "Jota0222",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "It allows to use multiple formatters as a composite formatter in just one run in Visual Studio Code",
     "repository": {
         "url": "https://github.com/jota0222/MultiFormatterVSCode.git"
@@ -67,7 +67,8 @@
         "onLanguage:javascriptreact",
         "onLanguage:typescriptreact",
         "onLanguage:haskell",
-        "onLanguage:php"
+        "onLanguage:php",
+        "onLanguage:twig"
     ],
     "devDependencies": {
         "@types/vscode": "^1.75.0",
