--- a/package.json
+++ b/package.json
@@ -55,20 +55,20 @@
         }
     },
     "activationEvents": [
-        "onLanguage:javascript",
-        "onLanguage:typescript",
-        "onLanguage:python",
-        "onLanguage:html",
-        "onLanguage:scss",
         "onLanguage:css",
+        "onLanguage:erb",
+        "onLanguage:haskell",
+        "onLanguage:html",
+        "onLanguage:javascript",
+        "onLanguage:javascriptreact",
+        "onLanguage:php",
+        "onLanguage:python",
+        "onLanguage:scss",
+        "onLanguage:typescript",
+        "onLanguage:typescriptreact",
         "onLanguage:vue",
         "onLanguage:vue-html",
-        "onLanguage:vue-postcss",
-        "onLanguage:javascriptreact",
-        "onLanguage:typescriptreact",
-        "onLanguage:haskell",
-        "onLanguage:php",
-        "onLanguage:erb"
+        "onLanguage:vue-postcss"
     ],
     "devDependencies": {
         "@types/vscode": "^1.75.0",
