--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,5 @@
 on:
   workflow_dispatch:
-    inputs:
-      releaseType:
-        description: "Release Type"
-        required: true
-        type: choice
-        default: "patch"
-        options:
-          - patch
-          - minor
-          - major
 
 jobs:
   release:
@@ -32,15 +22,10 @@ jobs:
           registryUrl: https://marketplace.visualstudio.com
 
       - name: Get Current Version Number
+        id: version_number
         run: |
           CURRENT_VERSION=$(cat package.json | jq .version | cut -d'"' -f 2)
-          echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
-
-      - name: Compile New Version
-        run: |
-          RELEASE_VERSION=$(npx semver $CURRENT_VERSION -i github.event.inputs.releaseType)
-          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
-          echo "Bump to $RELEASE_VERSION"
+          echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
       - name: Configure Git
         run: |
@@ -50,8 +35,7 @@ jobs:
       - name: Create tag
         run: |
           git log -1 --stat
-          npm version $RELEASE_VERSION
-          git tag -a v$RELEASE_VERSION -m "Release v$RELEASE_VERSION"
+          git tag -a v${{ steps.version_number.outputs.version }} -m "Release v${{ steps.version_number.outputs.version }}"
           git push origin main --tags
 
       - name: Create changelog for release
@@ -64,7 +48,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "./multi-format-*"
-          tag: ${{ env.GIT_TAG }}
+          tag: v${{ steps.version_number.outputs.version }}
           body: ${{ steps.github_release.outputs.changelog }}
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: ${{ contains(github.ref, 'rc') || contains(github.ref, 'beta') || contains(github.ref, 'alpha')}}
