--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "multi-formatter",
     "displayName": "Multiple Formatters",
     "publisher": "Jota0222",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "It allows to use multiple formatters as a composite formatter in just one run in Visual Studio Code",
     "repository": {
         "url": "https://github.com/jota0222/MultiFormatterVSCode.git"
@@ -70,6 +70,7 @@
         "onLanguage:php",
         "onLanguage:twig",
         "onLanguage:markdown",
+        "onLanguage:rust",
         "onLanguage:erb"
     ],
     "devDependencies": {
