--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     ],
     "devDependencies": {
         "@types/vscode": "^1.75.0",
-        "typescript": "^4.9.5",
-        "@vscode/vsce": "^2.17.0"
+        "@vscode/vsce": "^2.19.0",
+        "typescript": "^4.9.5"
     }
 }
