feat: Add csharp support. Tested using multiple formatters plugin for csharpier and dotnet format with editor config worked perfectly

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "activationEvents": [
         "onLanguage:astro",
         "onLanguage:css",
+        "onLanguage:csharp",
         "onLanguage:erb",
         "onLanguage:haskell",
         "onLanguage:html",
