Added settings to force usage of prettier to format the code

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,7 @@
         "nicoespeon.abracadabra",
         "ryu1kn.partial-diff",
         "tabnine.tabnine-vscode",
-        "gregorbiswanger.json2ts"
+        "gregorbiswanger.json2ts",
+        "esbenp.prettier-vscode"
     ]
 }
